--- a/Kubernetes-Phonebook/helm-chart/templates/ingress.yaml
+++ b/Kubernetes-Phonebook/helm-chart/templates/ingress.yaml
@@ -23,3 +23,17 @@ spec:
             name: resultserver-service
             port:
               number: 80
+      - path: /grafana
+        pathType: Prefix
+        backend:
+          service:
+            name: grafana
+            port:
+              number: 80
+      - path: /prometheus
+        pathType: Prefix
+        backend:
+          service:
+            name: prometheus-server
+            port:
+              number: 80
